--- a/26_Apache_Structured_Streaming_Yeni_API/SparkStreamingExample/pom.xml
+++ b/26_Apache_Structured_Streaming_Yeni_API/SparkStreamingExample/pom.xml
@@ -47,6 +47,25 @@
                 <artifactId>spark-sql-kafka-0-10_2.11</artifactId>
                 <version>${spark.version}</version>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-streaming-kafka-0-10-assembly -->
+            <dependency>
+                <groupId>org.apache.spark</groupId>
+                <artifactId>spark-streaming-kafka-0-10-assembly_2.11</artifactId>
+                <version>${spark.version}</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-streaming-kafka-0-10 -->
+            <dependency>
+                <groupId>org.apache.spark</groupId>
+                <artifactId>spark-streaming-kafka-0-10_2.11</artifactId>
+                <version>${spark.version}</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients -->
+            <dependency>
+                <groupId>org.apache.kafka</groupId>
+                <artifactId>kafka-clients</artifactId>
+                <version>1.0.0</version>
+            </dependency>
+
 
         </dependencies>
 
@@ -75,14 +94,14 @@
                         <archive>
                             <manifest>
                                 <addClasspath>true</addClasspath>
-                                <mainClass>com.veribilimiokulu.ReadFromConsole</mainClass>
+                                <mainClass>com.veribilimiokulu.ReadFromKafka</mainClass>
                             </manifest>
                         </archive>
 
                     </configuration>
                 </plugin>
 
-                <!-- Plugin to create a single jar that includes all dependencies -->
+                <!-- Plugin to create a single jar that includes all dependencies
                 <plugin>
                     <artifactId>maven-assembly-plugin</artifactId>
                     <version>2.4</version>
@@ -101,6 +120,7 @@
                         </execution>
                     </executions>
                 </plugin>
+                -->
 
                 <plugin>
                     <groupId>net.alchim31.maven</groupId>
